# Phase — axum router for the CRM **credit-notes** HTTP surface (§1.8).
#
# Mirrors the work done by `src/app/actions/crm-credit-notes.actions.ts`:
#   * Mongo reads  — paginated list (q + clientId + status filters), get-by-id.
#   * Mongo writes — create / update / soft-delete on the `crm_credit_notes`
#                    collection.
#
# Mounted under `/v1/crm/credit-notes` from the orchestrating `api` crate.
# Per the slice contract this crate is a leaf — the orchestrator wires it
# into the workspace `Cargo.toml`.
[package]
name = "crm-credit-notes"
version = "0.1.0"
edition = "2024"
description = "Axum router for the CRM credit-notes HTTP surface (`/v1/crm/credit-notes/*`). Owns list / get / create / update / soft-delete endpoints scoped by `userId`; ports `src/app/actions/crm-credit-notes.actions.ts` and seeds lineage from a parent invoice (§13.5)."
license = "UNLICENSED"
publish = false

[lib]
name = "crm_credit_notes"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bson = { version = "2", features = ["chrono-0_4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
mongodb = "3.2"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = { version = "0.8", default-features = false, features = ["json", "http1", "query"] }
tracing = "0.1"
anyhow = "1.0"

crm-core = { path = "../crm-core" }
crm-sales-types = { path = "../crm-sales-types" }
sabnode-auth = { path = "../auth" }
sabnode-common = { path = "../common" }
sabnode-db = { path = "../db" }

[lints]
workspace = true
