# Phase — axum router for the CRM **deals** HTTP surface.
#
# Mirrors the work done by `src/app/actions/crm-deals.actions.ts`:
#   * Mongo reads  — paginated list (q + pipelineId + stageId filters), get-by-id.
#   * Mongo writes — create / update / delete on the `crm_deals` collection.
#
# Mounted under `/v1/crm/deals` from the orchestrating `api` crate. Per the
# slice contract this crate is a leaf — the orchestrator wires it into the
# workspace `Cargo.toml`.
[package]
name = "crm-deals"
version = "0.1.0"
edition = "2024"
description = "Axum router that mounts the CRM deals HTTP surface (`/v1/crm/deals/*`). Owns list / get / create / update / delete endpoints scoped by `userId`; ports `src/app/actions/crm-deals.actions.ts`."
license = "UNLICENSED"
publish = false

[lib]
name = "crm_deals"
path = "src/lib.rs"

[dependencies]
# Axum HTTP — same feature union as sibling routers so the api crate
# resolves a single set of cargo features at build time.
axum = { version = "0.8", default-features = false, features = ["json", "http1", "tokio", "macros", "query"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Standard serialization stack used across the workspace.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# BSON ObjectId construction (ids on the wire are hex strings; we parse via
# `oid_from_str` from `sabnode-db`).
bson = { version = "2", features = ["chrono-0_4"] }

# Wall-clock for `createdAt` / `updatedAt`.
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Mongo driver wrappers + futures combinators (for `cursor.try_next`).
mongodb = "3"
futures = "0.3"

# Tracing for handler-level spans.
tracing = "0.1"

# Error plumbing — anyhow funnels into `ApiError::Internal`.
anyhow = "1"

# OpenAPI annotations to keep parity with sibling routers.
utoipa = { version = "5", features = ["axum_extras", "chrono"] }

# Sibling crates — shared error envelope, JWT extractor, Mongo handle,
# CRM lineage helpers, and the `Deal` shape source-of-truth.
sabnode-common = { path = "../common" }
sabnode-auth = { path = "../auth" }
sabnode-db = { path = "../db" }
crm-core = { path = "../crm-core" }
crm-sales-crm-types = { path = "../crm-sales-crm-types" }

[lints]
workspace = true
