[package]
name = "crm-debit-notes"
version = "0.1.0"
edition = "2024"
description = "Debit Note CRUD + lineage handlers (§2.4). Reads/writes crm-purchases-types::DebitNote against the `crm_debit_notes` Mongo collection. Ports `src/app/actions/crm-debit-notes.actions.ts` (G6 lineage pattern: parents = bill, purchaseOrder)."
license = "UNLICENSED"
publish = false

[lib]
name = "crm_debit_notes"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bson = { version = "2", features = ["chrono-0_4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
mongodb = "3.2"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = { version = "0.8", default-features = false, features = ["json", "http1", "query"] }
tracing = "0.1"
anyhow = "1.0"

crm-core = { path = "../crm-core" }
crm-purchases-types = { path = "../crm-purchases-types" }
sabnode-auth = { path = "../auth" }
sabnode-common = { path = "../common" }
sabnode-db = { path = "../db" }

[lints]
workspace = true
