[package]
name = "crm-extras-types"
version = "0.1.0"
edition = "2024"
description = "DTOs for advanced/cross-cutting CRM features (§12 in crm_function_plan.md): subscriptions, contracts, RFQ/bid, GRN/BOM, POS/store, coupons/loyalty, tickets/SLA/KB, portals, field service, bookings, fixed assets, budgets, petty cash, loans, multi-currency, multi-branch, NPS/referral, templates, audit log, workflow, import/export, dashboards, saved views, background jobs, India tax compliance, HR disciplinary/awards."
license = "UNLICENSED"
publish = false

[lib]
name = "crm_extras_types"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bson = { version = "2", features = ["chrono-0_4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
crm-core = { path = "../crm-core" }
crm-sales-types = { path = "../crm-sales-types" }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
