[package]
name = "crm-form-submissions"
version = "0.1.0"
edition = "2024"
description = "Form Submission entity. Lead-capture submissions tied to a crm_forms doc."
license = "UNLICENSED"
publish = false

[lib]
name = "crm_form_submissions"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bson = { version = "2", features = ["chrono-0_4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
mongodb = "3.2"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = { version = "0.8", default-features = false, features = ["json", "http1", "query"] }
tracing = "0.1"
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

crm-common = { path = "../crm-common" }
crm-core = { path = "../crm-core" }
sabnode-auth = { path = "../auth" }
sabnode-common = { path = "../common" }
sabnode-db = { path = "../db" }
sabnode-rbac = { path = "../rbac" }

[lints]
workspace = true
