[package]
name = "crm-grns"
version = "0.1.0"
edition = "2024"
description = "GRN (Goods Receipt Note) CRUD + lineage handlers (§12.4). Reads/writes crm-extras-types::Grn against the `crm_grns` Mongo collection."
license = "UNLICENSED"
publish = false

[lib]
name = "crm_grns"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bson = { version = "2", features = ["chrono-0_4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
mongodb = "3.2"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = { version = "0.8", default-features = false, features = ["json", "http1", "query"] }
tracing = "0.1"
anyhow = "1.0"

crm-core = { path = "../crm-core" }
crm-extras-types = { path = "../crm-extras-types" }
sabnode-auth = { path = "../auth" }
sabnode-common = { path = "../common" }
sabnode-db = { path = "../db" }

[lints]
workspace = true
