[package]
name = "crm-integrations-types"
version = "0.1.0"
edition = "2024"
description = "DTOs for CRM Integrations & Settings (§8 in crm_function_plan.md): integration configs and tenant settings."
license = "UNLICENSED"
publish = false

[lib]
name = "crm_integrations_types"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bson = { version = "2", features = ["chrono-0_4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
crm-core = { path = "../crm-core" }
crm-sales-types = { path = "../crm-sales-types" }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
