[package]
name = "crm-invoices"
version = "0.1.0"
edition = "2024"
description = "Invoice CRUD + lineage handlers (§1.6). Reads/writes crm-sales-types::Invoice against the `crm_invoices` Mongo collection. Mirrors `src/app/actions/crm-invoices.actions.ts` (saveInvoice + family) over an axum router mounted under `/v1/crm/invoices`."
license = "UNLICENSED"
publish = false

[lib]
name = "crm_invoices"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bson = { version = "2", features = ["chrono-0_4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
mongodb = "3.2"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = { version = "0.8", default-features = false, features = ["json", "http1", "query"] }
tracing = "0.1"
anyhow = "1.0"

crm-core = { path = "../crm-core" }
crm-sales-types = { path = "../crm-sales-types" }
sabnode-auth = { path = "../auth" }
sabnode-common = { path = "../common" }
sabnode-db = { path = "../db" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4.3"

[lints]
workspace = true
