[package]
name = "crm-lookup"
version = "0.1.0"
edition = "2024"
description = "Mongo-backed executor + Axum route handler for the unified lookup API (§13.4 in crm_function_plan.md). Implements the LookupRegistry contract from crm-lookup-types for the canonical 8 entities (Client, Vendor, Item, Employee, User, Account, Warehouse, BankAccount)."
license = "UNLICENSED"
publish = false

[lib]
name = "crm_lookup"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bson = { version = "2", features = ["chrono-0_4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
mongodb = "3.2"
fred = { version = "10.1", default-features = true, features = ["enable-rustls"] }
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = { version = "0.8", default-features = false, features = ["json", "http1", "query"] }
tracing = "0.1"
anyhow = "1.0"

crm-lookup-types = { path = "../crm-lookup-types" }
sabnode-common = { path = "../common" }
sabnode-db = { path = "../db" }
sabnode-auth = { path = "../auth" }

[lints]
workspace = true
