[package]
name = "crm-payment-receipts"
version = "0.1.0"
edition = "2024"
description = "Payment receipt CRUD + lineage handlers (§1.7). Reads/writes crm-sales-types::PaymentReceipt against the `crm_payment_receipts` Mongo collection."
license = "UNLICENSED"
publish = false

[lib]
name = "crm_payment_receipts"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bson = { version = "2", features = ["chrono-0_4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
mongodb = "3.2"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = { version = "0.8", default-features = false, features = ["json", "http1", "query"] }
tracing = "0.1"
anyhow = "1.0"

crm-core = { path = "../crm-core" }
crm-sales-types = { path = "../crm-sales-types" }
sabnode-auth = { path = "../auth" }
sabnode-common = { path = "../common" }
sabnode-db = { path = "../db" }

[lints]
workspace = true
